--- a/README.org
+++ b/README.org
@@ -1,1 +1,162 @@
-1
+* SQL 
+** инсточник информации
+[[https://info-comp.ru/obucheniest/489-coalesce-isnull-in-t-sql.html][Функции COALESCE]]
+[[http://langtoday.com/?p=334][Различия между on и where в SQL]]
+http://www.sql-ex.ru
+[[https://ru.wikipedia.org/wiki/Select_(SQL)][Порядок выполнения SELECT]]
+[[https://ru.wikipedia.org/wiki/Join_(SQL)][когда join коммутативен]]
+[[https://blog.codinghorror.com/a-visual-explanation-of-sql-joins/][A Visual Explanation of SQL Joins]]
+[[https://en.wikipedia.org/wiki/Select_(SQL)][#Query_evaluation_ANSI]]
+* Математика
+** Источник информации
+[[http://math.hashcode.ru/questions/195407/%25D0%25BC%25D0%25B0%25D1%2582%25D0%25B5%25D0%25BC%25D0%25B0%25D1%2582%25D0%25B8%25D0%25BA%25D0%25B0-%25D0%25BD%25D0%25B0%25D0%25B9%25D1%2582%25D0%25B8-%25D0%25BA%25D0%25BE%25D0%25BB%25D0%25B8%25D1%2587%25D0%25B5%25D1%2581%25D1%2582%25D0%25B2%25D0%25BE-%25D1%2586%25D0%25B5%25D0%25BB%25D0%25BE%25D1%2587%25D0%25B8%25D1%2581%25D0%25BB%25D0%25B5%25D0%25BD%25D0%25BD%25D1%258B%25D1%2585-%25D1%2580%25D0%25B5%25D1%2588%25D0%25B5%25D0%25BD%25D0%25B8%25D0%25B9][Найти количество целочисленных решений]]
+[[http://math.hashcode.ru/questions/195406/%25D0%25BC%25D0%25B0%25D1%2582%25D0%25B5%25D0%25BC%25D0%25B0%25D1%2582%25D0%25B8%25D0%25BA%25D0%25B0-%25D0%25B7%25D0%25B0%25D0%25B4%25D0%25B0%25D1%2587%25D0%25B0-%25D0%25BF%25D0%25BE-%25D0%25B3%25D0%25B5%25D0%25BE%25D0%25BC%25D0%25B5%25D1%2582%25D1%2580%25D0%25B8%25D1%258F-%25D0%25BD%25D0%25B0%25D0%25B9%25D1%2582%25D0%25B8-%25D0%25BD%25D0%25B0%25D0%25B8%25D0%25BC%25D0%25B5%25D0%25BD%25D1%258C%25D1%2588%25D0%25B8%25D0%25B9-%25D1%2583%25D0%25B3%25D0%25BE%25D0%25BB-%25D1%2582%25D1%2580%25D0%25B5%25D1%2583%25D0%25B3%25D0%25BE%25D0%25BB%25D1%258C%25D0%25BD%25D0%25B8%25D0%25BA%25D0%25B0][Задача по геометрия (найти наименьший угол треугольника)]]
+[[https://ru.wikipedia.org/wiki/%25D0%25A1%25D0%25BF%25D0%25B8%25D1%2581%25D0%25BE%25D0%25BA_%25D0%25B8%25D0%25BD%25D1%2582%25D0%25B5%25D0%25B3%25D1%2580%25D0%25B0%25D0%25BB%25D0%25BE%25D0%25B2_%25D0%25BE%25D1%2582_%25D1%258D%25D0%25BA%25D1%2581%25D0%25BF%25D0%25BE%25D0%25BD%25D0%25B5%25D0%25BD%25D1%2586%25D0%25B8%25D0%25B0%25D0%25BB%25D1%258C%25D0%25BD%25D1%258B%25D1%2585_%25D1%2584%25D1%2583%25D0%25BD%25D0%25BA%25D1%2586%25D0%25B8%25D0%25B9][Список интегралов от экспоненциальных функций]]
+* Прога
+** Источник информации
+https://www.quora.com/q/miornsdczawystcn/How-Do-I-become-a-good-competitive-programmer-and-what-are-the-materials-I-need-to-study-from
+https://github.com/lnishan/awesome-competitive-programming
+http://sportprogramming.blogspot.com/2014/07/getting-started-with-sport-of.html
+https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%85%D0%BE%D0%B4_%D0%B4%D0%B5%D1%80%D0%B5%D0%B2%D0%B0#%D0%9F%D1%80%D1%8F%D0%BC%D0%BE%D0%B9_%D0%BE%D0%B1%D1%85%D0%BE%D0%B4_(NLR)
+
+https://www.youtube.com/watch?v=98k0wQY_L1E&list=PL-eVNDa9MNJczU4ZjhJDT8rIcCa12DyAx&index=3
+
+
+*** Задача 5
+[[https://www.geeksforgeeks.org/longest-palindrome-substring-set-1/][Задача 5]] 
+https://www.geeksforgeeks.org/count-maximum-length-palindromes-string/
+* анкета
+** 1
+Москва;
+
+
+1) Аналитик
+
+2) Разработчик Python
+** 2
+PostgreSQL 4, Python 4, django 4, bash 4 - использую в своем проекте-стартапе приложения для каршеринга электромобилей в Ереване. Сейчас
+участвуем в преакселераторе МФТИ "Инжеренер 4.0"
+
+
+Scipy 3, tensorflow 3, pytorch 3, numpy 3, Matplotlib 3, seaborn 3, scikit-learn 3, XGBoost 3, BigARTM 3, gensim 3, PyTorch 3, fast.ai 3 -
+писал диплом, использовал в работе, на хакатонах
+** 3
+- Стажировка в tinkoff лето 2019 в команде Евгения Юсупова и Евгения Смирнова
+- 2 хакатона на boosters
+- работа в modulbank лето 2018 программист-инженер. Автоматизация маркетинговой кампании через API сервисов facebook, vk, emarsys, mytarget
+- преподаватель в универе soft skills 2019-2020
+- свой проект-стартап приложения для каршеринга электромобилей в Ереване октябрь 2019-2020. Участие в преакселераторе МФТИ "инженер 4.0" и
+различных pitch сессий
+
+
+    Стажировка в tinkoff лето 2019 в команде Евгения Юсупова и Евгения Смирнова
+    2 хакатона на boosters
+    работа в modulbank лето 2018 программист-инженер. Автоматизация маркетинговой кампании через API сервисов facebook, vk, emarsys, mytarget
+    преподаватель в универе soft skills 2019-2020
+    свой проект-стартап приложения для каршеринга электромобилей в Ереване октябрь 2019-2020. Участие в преакселераторе МФТИ "инженер 4.0" и различных pitch сессий
+    
+
+
+---------------
+Стажировка в tinkoff лето 2019 в команде Евгения Юсупова и Евгения Смирнова:
+
+- исправил геоматчинг и названия торговых точек на официальные, понятные, на русском языке в транзакциях. До этого названия магазина было обозначено через транслитерацию. Иногда это было не название торговой точки, а название юридического лица. Еще, координатой многих магазинов в Москве был обозначен центр Москвы. Исправил их на координаты самих магазинов.
+
+
+2 хакатона на boosters
+
+работа в modulbank лето 2018 программист-инженер;
+
+- Строил модели для расчета LTV
+
+- С помощью Python автоматически выкачивал данные из внешней БД(mixpanel) в локальную БД
+
+- Участвовал в проектировании схем в БД
+
+- Занимался автоматизацией бизнес процессов в маркетинге: сделал скрипт, который автоматически обновлял информацию в маркетинговых кабинетах(AdWords, яндекс аудитории, My Target) из БД
+
+- Занимался автоматизацией маркетинговой кампании по тригерам почтовой рассылки(Emarsys): письмо дошло/не дошло, адресант его открыл или нет, прошел ли по рекламной ссылке
+
+
+преподаватель в универе soft skills 2019-2020
+
+свой проект-стартап приложения для каршеринга электромобилей в Ереване октябрь 2019-2020. Участие в преакселераторе МФТИ "инженер 4.0" и различных pitch сессий
+
+
+
+
+
+** 4
+Преподавал и вел курсы по soft skills в МФТИ 2019-2020г
+
+Хакатон в МФТИ от global changers, командный хакатон. Задача была от Сибура - найти во временном ряду аномалии. 
+Аномалии размечены не были. Заняли 2е место
+
+Апрель 2018 - май 2018 [[https://boosters.pro/championship/modulbank1][Modulbank AI Hack MSK (boosters)]] - топ 25%
+Декабрь 2018 - Январь 2019 Telecom Data Cup (ml bootcamp) - топ 50%
+Февраль 2019 - апрель 2019 okko competition по рекомендательным системам на [[http://\boosters.pro][boosters]] - топ6
+
+https://boosters.pro/user/Malahai - профиль на booster
+https://github.com/gazon1/ - github
+https://www.kaggle.com/malahai - kaggle
+---------------------
+
+Преподавал и вел курсы по soft skills в МФТИ 2019-2020г
+
+
+Хакатон в МФТИ от global changers, командный хакатон. Задача была от Сибура - найти во временном ряду аномалии. 
+
+Аномалии размечены не были. Заняли 2е место
+
+
+Апрель 2018 - май 2018 https://boosters.pro/championship/modulbank1 Modulbank AI Hack MSK (boosters) - топ 25%
+
+Декабрь 2018 - Январь 2019 Telecom Data Cup (ml bootcamp) - топ 50%
+
+Февраль 2019 - апрель 2019 okko competition по рекомендательным системам на http://boosters.pro boosters - топ6
+
+
+https://boosters.pro/user/Malahai - профиль на booster
+
+https://github.com/gazon1/ - github
+
+https://www.kaggle.com/malahai - kaggle
+
+
+Среди сложных проектов:
+
+    проект стартап - приложение для каршериринга электромобилей в Ереване. Работа в команде, соединение наработок членов команды в общее решение. Поиск возможностей, инвесторов, акселераторов, презентация проекта в формате pitch сессий перед инвесторами
+    построение автоматизированной маркетинговой компании летом 2018 в modulbank
+    построение ансамблей алгоритмов для улучшения системы рекомендации в соревновании okko competition по рекомендательным системам на http://boosters.pro - https://github.com/gazon1/Recco-challengeПреподавал и вел курсы по soft skills в МФТИ 2019-2020г
+
+
+Хакатон в МФТИ от global changers, командный хакатон. Задача была от Сибура - найти во временном ряду аномалии. 
+
+Аномалии размечены не были. Заняли 2е место
+
+
+Апрель 2018 - май 2018 https://boosters.pro/championship/modulbank1 Modulbank AI Hack MSK (boosters) - топ 25%
+
+Декабрь 2018 - Январь 2019 Telecom Data Cup (ml bootcamp) - топ 50%
+
+Февраль 2019 - апрель 2019 okko competition по рекомендательным системам на http://boosters.pro boosters - топ6
+
+
+https://boosters.pro/user/Malahai - профиль на booster
+
+https://github.com/gazon1/ - github
+
+https://www.kaggle.com/malahai - kaggle
+
+
+Среди сложных проектов:
+** 
+    проект стартап - приложение для каршериринга электромобилей в Ереване. Работа в команде, соединение наработок членов команды в общее решение. Поиск возможностей, инвесторов, акселераторов, презентация проекта в формате pitch сессий перед инвесторами
+    построение автоматизированной маркетинговой компании летом 2018 в modulbank
+    построение ансамблей алгоритмов для улучшения системы рекомендации в соревновании okko competition по рекомендательным системам на http://boosters.pro - https://github.com/gazon1/Recco-challenge
+** 5
+Уже участвовал в проекте прошлым летом, но тогда не смог остатьтся после стажировки в штат. Сейчас хочу показать команде, что знаю, умеею и остаться в штате по полную ставку. Есть желание рости в роли аналитика, тимлида - есть небольшой опыт в развитии своего стартапа. поэтому есть примерное понимание обязанности тимлидла
+* фильм
+
+
+https://hi.online-filmse-kino.ru/43072-chelovek-shveycarskiy-nozh-2016.html
